/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

                 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "common.proto";

option java_package = "bft.miguel.proto";

package proto;


message EnvelopeWrapper {
    string channelId = 1;
    common.Envelope envelope = 2;
    int64 timestamp = 3;
    enum EnvelopeType {
        NORMAL = 0;
        CONFIG = 1;
    }
    EnvelopeType envelopeType = 4;
}